# test-ia

./: .dockerignore  .gitignore  AGENT.md  docker-compose.yml  opencode.json
.github/workflows/: ci.yml
.opencode/skills/: common.md  developer.md  devops.md  scrum-master.md  tester.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  article.py  defi.py  partie.py
backend/app/routers/: __init__.py  defis.py  stats.py  tentatives.py
backend/app/schemas/: __init__.py  defi.py  partie.py
backend/app/services/: defi_service.py  stats_service.py
backend/tests/: test_defis_api.py  test_main.py  test_stats_historique.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
frontend/src/__tests__/: ArticleView.test.jsx  GameStatus.test.jsx
frontend/src/components/: ArticleView.jsx  GameStatus.jsx  GuessForm.jsx  History.jsx  Stats.jsx
gestion-projet/: cdc.md
infra/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.nlp  nginx.conf
nlp-pipeline/: pyproject.toml
nlp-pipeline/data/: wikidle.db
nlp-pipeline/pipeline/: __init__.py  __main__.py  article_store.py  config.py  difficulte.py  filters.py  redacteur.py  schemas.py  wikipedia_client.py
nlp-pipeline/tests/: conftest.py  test_article_store.py  test_difficulte.py  test_filters.py  test_redacteur.py  test_wikipedia_client.py
